# cryptologic

./: Makefile  README.md  pyproject.toml
src/: __init__.py  coinlist.py  cryptologic.py  formatter.py  getaverage.py  getexchanges.py  getpairs.py  getprice.py  pricedifference.py  query_cryptocompare.py
