[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "cryptologic"
author = "Gerrishon Sirere"
author-email = "secretum.inc@pm.me"
home-page = "https://github.com/secretum-inc/cryptologic"

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP"
    ]
requires = [

]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://github.com/secretum-inc/cryptologic"

[tool.flit.metadata.requires-extra]
test = [


]
doc = [
   
]
dev = [
    

]
all = [
    "requests >=2.24.0,<3.0.0",
    "astroid==2.4.2", 
    "attrs==20.3.0",
    "quo==2021.5.dev15",
    "autopep8==1.5.4", 
    "certifi==2020.12.5",
    "chardet==4.0.0",
    "coveralls==3.0.0",
    "doc8==0.8.1",
    "docopt==0.6.2",
    "docutils==0.16",
    "filelock==3.0.12",
    "idna==2.10",
    "iniconfig==1.1.1",
    "isort==5.7.0",
    "lazy-object-proxy==1.4.3",
    "mccabe==0.6.1",
    "more-itertools==8.6.0",
    "mypy==0.800",
    "mypy-extensions==0.4.3",
    "packaging==20.8",
    "pbr==5.5.1", 
    "pluggy==0.13.1",
    "public==2020.12.3",
    "py==1.10.0",
    "pycodestyle==2.6.0",
    "Pygments==2.7.4",
    "pylint==2.6.0",
    "pyparsing==2.4.7",
    "pytest==6.2.1",
    "pytest-cov==2.11.1",
    "pytest-mypy==0.8.0",
    "query-string==2020.12.3",
    "requests==2.25.1",
    "restructuredtext-lint==1.3.2",
    "six==1.15.0",
    "stevedore==3.3.0",
    "toml==0.10.2",
    "typed-ast==1.4.2",
    "typing-extensions==3.7.4.3",
    "urllib3==1.26.5",
    "wcwidth==0.2.5",
    "wrapt==1.12.1", 
    

]

[tool.isort]
profile = "black"
known_third_party = ["cryptologic",]
skip_glob = [
    "tests/commands/test1.py",
    "tests/commands/test2.py",
    "tests/commands/test3.py",
    ]
